primer navbar de la pagina
hay que arreglar el boton del svg

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,9 @@
 :root{
     --color-tema: black;
     --color-texto: white;
-
+    --navbar-shadow: rgb(196, 196, 196);
+    --color-mobile:rgb(138, 138, 138);
+    --color-mobile-texto: black;
 }
 
 body{
