--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -5,6 +5,7 @@
     left:0;
     top:0;
     width: 100%;
+    margin-bottom: 50px;
 }
 
 .topNav{
@@ -24,7 +25,9 @@
 }
 
 /*Menu*/
-
+section{
+margin-top: 30%;
+}
 .menu{
     display: flex;
     list-style: none;
@@ -94,4 +97,13 @@
         opacity: 1;
         pointer-events: all;
     }
+}
+
+#slider1{
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    height:90%;
+    width: 95%;
 }
