--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,16 +5,56 @@
     --color-mobile:rgb(138, 138, 138);
     --color-mobile-texto: black;
 }
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "Oswald";
+}
 
 body{
-    background: var(--color-tema);
+    background-color: var(--color-tema);
     color: var(--color-texto); 
+    font-family: 'Oswald', sans-serif;
+ 
 }
-section{
-    background:linear-gradient(black,grey);
-}
+
 a{
     text-decoration: none;
     color: var(--color-texto);
 }
+
+.btnWsp{
+    position: fixed;
+    width: 55px;
+    height: 55px;
+    line-height: 50px;
+    bottom: 30px; 
+    right: 30px;
+    background: #0df053;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 40px;
+    box-shadow: 0 1px rgba(0, green,0, 0.3);
+    z-index: 100;
+}
+.btnWsp:hover{
+   
+    color: #fff;
+}
+/*carrusel*/
+
+.carruselContenedor{
+    position: relative;
+}
+
+.btnAnterior,
+.btnSiguiente{
+    position: absolute;
+    display: block;
+    width: 30px;
+    height: 30px;
+    border: none;
+}
+
 
