--- a/style.css
+++ b/style.css
@@ -1,42 +1,26 @@
- 
-body{
-  background-color: #010616;
-}
+ body{
+   background-color: #000C33;
+ }
  canvas {
    position: fixed;
-  margin: 20%  10% auto;
+   top: 0;
+   left: 0;
+   margin-top: 6%;
  }
-
-.Contenedor{
+.contendor{
   position: relative;
-   color: white;
-
- }
-
+}
+.navbar-brand{
+  font-weight: bold;
+}
  .Titulo{
-  position: absolute;
-  color: white;
-  left: 61%;
-  top: 61%;
- }
 
- @media (max-width: 850px){
-  #bg {
-    position: fixed;
-    height: 92%;
-    width: 100%;
-  }
- 
- .Contenedor{
-   position: relative;
-    color: white;
- 
-  }
- 
-  .Titulo{
-    position: absolute;
-    color:white;
-    left: 25%;
-    top: 18%;
-  }
+   position: absolute;
+  font-size: 70px;
+  line-height: 120px;
+  align-items: Center;
+  vertical-align: Top;
+  color: #F8EEEE;
+  left: 4%;
+  top: 63%;
  }
