--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
  body{
+
    background-color: #000C33;
  }
  canvas {
@@ -13,6 +14,16 @@
 .navbar-brand{
   font-weight: bold;
 }
+
+.slider{
+  display: flex;
+
+  max-width: 500px;
+  height: 300px;
+  width: 100%;
+
+}
+
  .Titulo{
   position: absolute;
   font-size: 100px;
@@ -34,18 +45,87 @@
   top: 58%;
  }
 
- #ImagenPrincipal{
-  width: 71%;
-  margin-top: -92px;
-  transform: rotate(
-3deg);
-  margin-left: 406px;
-  opacity: .8;
+ .Frase{
+  position: absolute;
+  font-size: 29px;
+  line-height: 120px;
+  align-items: Center;
+  vertical-align: Top;
+  color: #FFFF;
+  left: 30%;
+  top: 85%;
+  letter-spacing: 0.25em;
  }
- hr {
-  height: 100px;
-  background-color: white;
+
+ #Seguridad{
+  top: 21%;
+  font-size: 124px;
+  left: 37.6%;
+ }
+#ciber{
+  left: 24%;
+  font-size: 124px;
+  top: 21%;
 }
+
+#desarrollo{
+  left: 41%;
+    top: 21%;
+    font-size: 144px;
+}
+#web{
+  top: 35%;
+  left: 51%;
+  font-size: 144px;
+}
+
+#ImagenTelefono{
+  width: 272px;
+
+  margin-left: 36%;
+  margin-top: 69%
+}
+
+#ImagenMonitor{
+  width: 950px;
+  margin-left: 74%;
+  margin-top: 38px;
+ 
+}
+ #ImagenPrincipal{
+  width: 245%;
+  margin-top: -30%;
+  margin-left: 155%;
+  opacity: 1;
+  
+ }
+ 
+ .banner{
+   background-color: white;
+ }
  @media(max-width: 940px){
 
  }
+
+
+
+
+/*Movimientos y animaciones*/
+.slide-out-right{animation:slide-out-right 1.5s linear both}
+@keyframes slide-out-right{0%{transform:translateX(0);opacity:1}100%{transform:translateX(1000px);opacity:0}}
+
+.slide-in-top{animation:slide-in-top .5s cubic-bezier(.25,.46,.45,.94) reverse both}
+@keyframes slide-in-top{0%{transform:translateY(-1000px);opacity:0}100%{transform:translateY(0);opacity:1}}
+
+.slide-in-bottom{animation:slide-in-bottom 1.5s cubic-bezier(.25,.46,.45,.94) both}
+@keyframes slide-in-bottom{0%{transform:translateY(1000px);opacity:0}100%{transform:translateY(0);opacity:1}}
+
+.slide-in-left{animation:slide-in-left 1.5s cubic-bezier(.25,.46,.45,.94) both}
+@keyframes slide-in-left{0%{transform:translateX(-1000px);opacity:0}100%{transform:translateX(0);opacity:1}}
+
+.slide-in-right{animation:slide-in-right 1.5s cubic-bezier(.25,.46,.45,.94) both}
+@keyframes slide-in-right{0%{transform:translateX(1000px);opacity:0}100%{transform:translateX(0);opacity:1}}
+
+.text-focus-in{animation:text-focus-in 1s cubic-bezier(.55,.085,.68,.53) both}
+@keyframes text-focus-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}}
+/*--------------*/
