--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 
 body{
-
     background-color: #000C33;
   }
   canvas {
@@ -81,20 +80,21 @@ body{
  }
  
  #desarrollo{
-  left: -79%;
+  left: -109%;
   top: 21%;
   font-size: 144px;
  }
  #web{
-  left: -16%;
+  left: -46%;
   top: 35%;
   font-size: 144px;
  }
  
  #ImagenTelefono{
-  width: 272px;
-  margin-left: -278%;
-  margin-top: 80%;
+  width: 250px;
+  margin-left: -325%;
+  margin-top: 55%;
+  
  }
  
  #ImagenMonitor{
@@ -111,10 +111,6 @@ body{
   .banner{
     background-color: white;
   }
-  @media(max-width: 940px){
- 
-  }
- 
  .secciones{
    width: 100vw;
    height: 100vh;
@@ -126,32 +122,216 @@ body{
  }
 
  .ImagenesServicios{
-  width: 30%;
+  width: 35%;
  }
  .barraBlanca{
-   position: absolute;
-  width: 100vw;
-  height: 176px;
-  bottom: 0;
+  border-top: 291px solid white;
+  max-width: 100vw;
+  padding: 0;
+  margin: -292px auto 0 auto;
+ }
+
+ .staffing{
+  width: 45%;
+  margin-left: 57%;
+  margin-top: -29%;
+ }
+
+ hr{
+  color: #D1525A;
+  width: 34%;
+  height: 3px;
+ }
+ .lista{
+  margin-top: 15%;
  }
  
- /* .slide-out-right{animation:slide-out-right 2s linear both}
- @keyframes slide-out-right{0%{transform:translateX(0);opacity:1}100%{transform:translateX(1000px);opacity:0}}
+
+ /*titulos de todas los componentes*/
+ /*STAFFING*/
+#tituloStaffing
+{
+  font-size: 64px;
+   color: #FFF ;
+    display: inline;
+}
+#tituloStaffingRojo{
+  font-size: 64px;
+  color: #D1525A;
+  display: inline;
+}
+#fraseStaffing{
+  color: white;
+  font-size: 24px;
+  margin-top: 30px;
+}
+#btnStaffing{
+  border-color: #D1525A;
+  background: none;
+  color: #FFF;
+  width: 228px;
+  height: 53px;
+}
+
+/*Que hacemos*/
+#queHacemos{
+  font-size: 96px;
+  color:white;
+  text-align: center;
+}
+
+/*CiberSeguridad*/
+#fraseCiber{
+  position: absolute; 
+  margin-top: 150px;
+  color: white; 
+  letter-spacing: 2px;
+}
+#tituloCiberRojo{
+  margin-left: 30%;
+  font-size: 64px; 
+  color: #D1525A; 
+  display: inline;
+}
+#tituloCiber{
+  font-size: 64px; 
+  color: #FFF; 
+  display: inline;
+}
+#listaCiber{
+  color:white;
+  display: inline;
+  font-size: 24px;
+}
+#descripcionCiber{
+  margin-left: 39%;
+  color: white;
+  font-size: 21px;
+  margin-top: -91px;
+  text-align: center;
+}
+
+/*Desarrollo*/
+#fraseDesarrollo{
+  position: absolute; 
+  margin-top: 150px;
+  margin-left:43.2%;
+  color: white; 
+  letter-spacing: 4px;
+}
+#tituloDesarrolloRojo{
+  margin-left: 36.4%;
+  font-size: 64px; 
+  color: #D1525A; 
+  display: inline;
+  margin-top: 10px;
+}
+#tituloDesarrollo{
+  font-size: 64px; 
+  color: #FFF; 
+  display: inline;
+}
+#ubiListaDesarrollo{
+  margin-top: 10%;
+  margin-left: 64%;
+}
+#listaDesarrollo
+{
+  color:white;
+  display: inline;
+  font-size: 24px;
+}
+#imgDesarrollo
+{
+  margin-top: -30%;
+}
+#descripcionDesarrollo
+{
+  color: white;
+  font-size: 21px;
+  text-align: center;
+  margin-left: -64%;
+}
+#fraseOutsourcing
+{
+  position: absolute;
+  margin-top: 130px;
+  color: white;
+  letter-spacing: 5px;
+}
+#tituloOutsourcingRojo
+{
+  margin-left:36.5%;
+  font-size: 64px; 
+  color: #D1525A; 
+  display: inline;
+}
+#tituloOutsourcing
+{
+  font-size: 64px; 
+  color: #FFF; 
+  display: inline;
+}
+#descripcionOutsourcing{
+  margin-left: 50%;
+  color: white;
+  font-size: 20px;
+  margin-top: 50px; 
+  text-align: center;
+}
+#listaOutsourcing{
+  color:white;
+  display: inline;
+  font-size: 24px;
+}
+#ImagenOutsourcing{
+  margin-left: 58%;
+  margin-top: -23%;
+}
+
+/*Sponsor*/
+#tituloSponsor{
+  color: white;
+  letter-spacing: 10px;
+  text-align: center;
+}
+.Sponsor{
+  height: 50vh;
+}
+.imgSponsor{
+  display: inline;
+  margin-left: 6%;
+}
+
+
+/*Clientes*/
+.clientes{
+  height: 50vh;
+  background-color:#C4C4C4 ;
  
- .fade-out{animation:fade-out 2s ease-out both}
- @keyframes fade-out{0%{opacity:1}100%{opacity:0}}
- 
- .slide-in-top{animation:slide-in-top .5s cubic-bezier(.25,.46,.45,.94) reverse both}
- @keyframes slide-in-top{0%{transform:translateY(-1000px);opacity:0}100%{transform:translateY(0);opacity:1}}
- 
- .slide-in-bottom{animation:slide-in-bottom 4s cubic-bezier(.25,.46,.45,.94) both}
- @keyframes slide-in-bottom{0%{transform:translateY(1000px);opacity:0}100%{transform:translateY(0);opacity:1}}
- 
- .slide-in-left{animation:slide-in-left 1.5s cubic-bezier(.25,.46,.45,.94) both}
- @keyframes slide-in-left{0%{transform:translateX(-1000px);opacity:0}100%{transform:translateX(0);opacity:1}}
- 
- .slide-in-right{animation:slide-in-right 1.5s cubic-bezier(.25,.46,.45,.94) both}
- @keyframes slide-in-right{0%{transform:translateX(1000px);opacity:0}100%{transform:translateX(0);opacity:1}}
- 
- .text-focus-in{animation:text-focus-in 1s cubic-bezier(.55,.085,.68,.53) both}
- @keyframes text-focus-in{0%{filter:blur(12px);opacity:0}100%{filter:blur(0);opacity:1}} */
+}
+#tituloClientes{
+  color:#000C33 ;
+  letter-spacing: 10px;
+  text-align: center;
+  padding-top: 40px;
+}
+.ImgMarcas{
+  display: inline;
+  width: 161px;
+  opacity: 0.5;
+  margin-left: 4%;
+  margin-top: 50px;
+}
+
+/*footer*/
+#divFooter{
+  width: 100%; 
+  background-color: #FFF; 
+  height: 200%;
+}
+#footer{
+  margin-left: 10%;
+  width: 85%; 
+  padding-top: 100px;
+}
