--- a/index.css
+++ b/index.css
@@ -1,365 +1,477 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+
+
+  @font-face {
+  font-family: BeVietnam-Lightimport;
+  src: url("Fonts/BeVietnam-Light.ttf");
+  }
+
+  @font-face {
+  font-family: BeVietnam-Regularimport;
+  src: url("Fonts/BeVietnam-Regular.ttf");
+  }
+
+  @font-face {
+  font-family: BeVietnam-Boldimport;
+  src: url("Fonts/BeVietnamPro-Bold.ttf");
+  }
+
 body{
     background-color: #000C33;
   }
 
- .navbar-brand{
-   font-weight: bold;
- }
- 
- .slider{
-   display: flex;
- 
-   max-width: 500px;
-   height: 300px;
-   width: 100%;
-   
- }
- 
-  .Titulo{
-   position: absolute;
-   font-size: 100px;
-   line-height: 120px;
-   align-items: Center;
-   vertical-align: Top;
-   color: #F8EEEE;
-   left: 10%;
-   top: 38%;
-  }
-  
-  .TituloRojo{
-   position: absolute;
-   font-size: 100px;
-   line-height: 120px;
-   align-items: Center;
-   vertical-align: Top;
-   color: #D1525A;
-   left: 25%;
-   top: 50%;
-  }
- 
-  .Frase{
-    position: absolute;
-    font-size: 29px;
-    line-height: 120px;
-    align-items: Center;
-    vertical-align: Top;
-    color: #FFFF;
-    left: 30%;
-    top: 59%;
-    letter-spacing: 0.65em;
-  }
-  .FraseMonitor{
-   position: absolute;
-   font-size: 29px;
-   line-height: 120px;
-   align-items: Center;
-   vertical-align: Top;
-   color: #FFFF;
-   left: 33%;
-   top: 7%;
-   letter-spacing: 0.25em;
-  }
-  #Seguridad{
-   top: 26%;
-   font-size: 124px;
-   left: 37.6%;
-  }
- #ciber{
-    left: 23.9%;
-    font-size: 124px;
-    top: 26%;
- }
- 
- #desarrollo{
-  left: -109%;
-  top: 21%;
-  font-size: 144px;
- }
- #web{
-  left: -46%;
-  top: 35%;
-  font-size: 144px;
- }
- 
- #ImagenTelefono{
-  width: 250px;
-  margin-left: -325%;
-  margin-top: 55%;
-  
- }
- 
- #ImagenMonitor{
-  width: 708px;
-  margin-left:-5% ;
-  margin-top: 56px
-  
- }
-  #ImagenPrincipal{
-  height: 60%;
-  margin-left: 150%;
-  }
-  
-  .banner{
+  .navbar-brand{
+    font-weight: bold;
+    }
+
+    #ImagenPrincipal{
+    height: 60%;
+    margin-left: 150%;
+    position:  relative;
+    }
+    .ImgPrincipal{
+      margin-left: 52%;
+      width: 45%;
+    }
+    .tituloBlancoPrincipal
+    {
+      position: absolute;
+      color: white;
+      top: 42%;
+      left: 21%;
+      font-size: 87px;
+    }
+    .tituloRojoPrincipal
+    {
+      position: absolute;
+      color: #D1525A;
+      top: 49%;
+      left: 27.1%;
+      font-size: 87px
+    }
+    .banner{
     background-color: white;
-  }
- .secciones{
-   width: 100vw;
-   height: 100vh;
-   margin-top: 100px;
- }
- 
- h3{
-   color:white;
- }
-
- .ImagenesServicios{
-  width: 35%;
- }
- .barraBlanca{
-  border-top: 291px solid white;
-  max-width: 100vw;
-  padding: 0;
-  margin: -292px auto 0 auto;
- }
-
- .staffing{
-  width: 45%;
-  margin-left: 57%;
-  margin-top: -29%;
- }
-
- hr{
-  color: #D1525A;
-  width: 34%;
-  height: 3px;
- }
- .lista{
-  margin-top: 15%;
- }
- 
-
- /*titulos de todas los componentes*/
- /*STAFFING*/
-#tituloStaffing
-{
-  font-size: 64px;
-   color: #FFF ;
+    }
+    .secciones{
+    width: 100vw;
+    height: 100vh;
+    margin-top: 100px;
+    margin-bottom: -15%;
+    }
+  
+    h3{
+    color:white;
+    }
+  
+    .ImagenesServicios{
+    width: 37%;
+  
+    }
+    .barraBlanca{
+    border-top: 291px solid white;
+    max-width: 100vw;
+    padding: 0;
+    margin: -292px auto 0 auto;
+    }
+  
+    .staffing{
+    position: absolute;
+    width: 40%;
+    left: 47%;
+    margin-top:-400px;
+    }
+  
+    hr{
+    color: #D1525A;
+    width: 40%;
+    height: 3px;  
+    border-bottom:#D1525A 1px solid;
+    opacity: 1;
+    }
+    .lista{
+    margin-top: 10%;
+    }
+  
+  
+    /*titulos de todas los componentes*/
+    /*STAFFING*/
+    #tituloStaffing
+    {
+  
+    font-weight: bold;
+    font-family: BeVietnam-Boldimport;
+    font-size: 64px;
+    color: #FFF ;
     display: inline;
-}
-#tituloStaffingRojo{
-  font-size: 64px;
-  color: #D1525A;
-  display: inline;
-}
-#fraseStaffing{
-  color: white;
-  font-size: 24px;
-  margin-top: 30px;
-}
-#btnStaffing{
-  border-color: #D1525A;
-  background: none;
-  color: #FFF;
-  width: 228px;
-  height: 53px;
-}
-
-/*Que hacemos*/
-#queHacemos{
-  font-size: 96px;
-  color:white;
-  text-align: center;
-}
-
-/*CiberSeguridad*/
-#fraseCiber{
-  position: absolute; 
-  margin-top: 150px;
-  color: white; 
-  letter-spacing: 2px;
-}
-#tituloCiberRojo{
-  margin-left: 30%;
-  font-size: 64px; 
-  color: #D1525A; 
-  display: inline;
-}
-#tituloCiber{
-  font-size: 64px; 
-  color: #FFF; 
-  display: inline;
-}
-#listaCiber{
-  color:white;
-  display: inline;
-  font-size: 24px;
-}
-#descripcionCiber{
-  margin-left: 39%;
-  color: white;
-  font-size: 21px;
-  margin-top: -91px;
-  text-align: center;
-}
-#ImgCiber{
-  margin-left: 54%;
-  margin-top: -50%
-}
-
-#btnCiber3Abrir,
-#btnCiber4Abrir{
-  margin-left: 21%;
-}
-#btnCiber2Abrir{
-  margin-left: 7%;
-}
-
-/*Desarrollo*/
-#fraseDesarrollo{
-  position: absolute; 
-  margin-top: 150px;
-  margin-left:33.3%;
-  color: white; 
-  letter-spacing: 4px;
-}
-#tituloDesarrolloRojo{
-  margin-left: 36.4%;
-  font-size: 64px; 
-  color: #D1525A; 
-  display: inline;
-  margin-top: 10px;
-}
-#tituloDesarrollo{
-  font-size: 64px; 
-  color: #FFF; 
-  display: inline;
-}
-#ubiListaDesarrollo{
-  margin-top: 10%;
-  margin-left: 54%;
-}
-#listaDesarrollo
-{
-  color:white;
-  display: inline;
-  font-size: 24px;
-}
-#imgDesarrollo
-{
-  margin-top: -30%;
-}
-#descripcionDesarrollo
-{
-  color: white;
-  font-size: 21px;
-  text-align: center;
-  margin-left: -64%;
-}
-#fraseOutsourcing
-{
-  position: absolute;
-  margin-top: 130px;
-  color: white;
-  letter-spacing: 5px;
-}
-#tituloOutsourcingRojo
-{
-  margin-left:36.5%;
-  font-size: 64px; 
-  color: #D1525A; 
-  display: inline;
-}
-#tituloOutsourcing
-{
-  font-size: 64px; 
-  color: #FFF; 
-  display: inline;
-}
-#descripcionOutsourcing{
-  margin-left: 50%;
-  color: white;
-  font-size: 20px;
-  margin-top: 50px; 
-  text-align: center;
-}
-#listaOutsourcing{
-  color:white;
-  display: inline;
-  font-size: 24px;
-}
-#ImagenOutsourcing{
-  margin-left: 58%;
-  margin-top: -33%;
-}
-
-/*Sponsor*/
-#tituloSponsor{
-  color: white;
-  letter-spacing: 10px;
-  text-align: center;
-}
-.Sponsor{
-  height: 50vh;
-}
-.imgSponsor{
-  display: inline;
-  margin-left: 23%;
-}
-
-
-/*Clientes*/
-.clientes{
-  height: 50vh;
-  background-color:#C4C4C4 ;
- 
-}
-#tituloClientes{
-  color:#000C33 ;
-  letter-spacing: 10px;
-  text-align: center;
-  padding-top: 40px;
-}
-.ImgMarcas{
-  display: inline;
-  width: 161px;
-  opacity: 0.5;
-  margin-left: 4%;
-  margin-top: 50px;
-}
-
-/*footer*/
-#divFooter{
-  width: 100%; 
-  background-color: #FFF; 
-  height: 200%;
-}
-#footer{
-  margin-left: 10%;
-  width: 85%; 
-  padding-top: 100px;
-}
-/*whatsapp*/
-.btnWsp{
-  position:fixed;
-  width:60px;
-  height:60px;
-  line-height: 60px;
-  bottom:25px;
-  right:25px;
-  background:#25d366;
-  color:#FFF;
-  border-radius:50px;
-  text-align:center;
-  font-size:35px;
-  box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
-  z-index:100;
-  transition: all 300ms ease;
-}
-.btnWsp:hover{
-  background:#FFF ;
-  color:#20ba5a;
-}
-
+  
+    }
+    #tituloStaffingRojo{
+    font-weight: bold;
+    font-family: BeVietnam-Boldimport;
+    font-size: 64px;
+    color: #D1525A;
+    display: inline;
+    }
+    #fraseStaffing{
+    color: white;
+    font-size: 20px;
+    margin-top: 30px;
+    }
+    #btnStaffing{
+    border-color: #D1525A;
+    background: none;
+    color: #FFF;
+    width: 228px;
+    height: 53px;
+    margin-top: 30px;
+    }
+  
+  
+    /*CiberSeguridad*/
+    #fraseCiber{
+    position: absolute; 
+    font-weight: lighter;
+    font-size: 13.7px;
+    margin-top: 90px;
+    color: white; 
+    letter-spacing: 2px;
+    }
+    #fraseCiber2{
+    position: absolute; 
+    font-weight: lighter;
+    font-size: 13.7px;
+    margin-top: 110px;
+    color: white; 
+    letter-spacing: 7px;
+    }
+    #tituloCiberRojo{
+    font-family: BeVietnam-Boldimport;
+    margin-left: -0.5%;
+    font-size: 64px; 
+    color: #D1525A; 
+    display: inline; 
+    }
+    #tituloCiber{
+    font-family: BeVietnam-Boldimport;
+    font-size: 64px; 
+    color: #FFF; 
+    display: inline;
+    }
+    #listaCiber{
+    color:white;
+    display: inline;
+    font-size: 24px;
+  
+    }
+    #descripcionCiber{
+    margin-left: 48%;
+    color: white;
+    font-size: 16px;
+    height: 12%;
+    margin-top: -95px;
+    text-align: center;
+    width: 30%;
+    padding-top: 20px;
+    background: #D1525A;
+    opacity: 85%;
+    border: #D1525A 1px solid ;
+  
+    border-top-left-radius: 20%;
+    border-bottom-right-radius: 20%;
+    }
+    #ImgCiber{
+    position: absolute;
+    left: 54%;
+    margin-top: -32%;
+    width: 34.5%;
+    }
+    #btnCiber1Abrir
+    {
+    margin-left: 5.7%;
+    }
+    #btnCiber3Abrir{
+    margin-left: 27%;
+  
+    }
+    #btnCiber4Abrir{
+    margin-left: 27.5%;
+    }
+    #btnCiber2Abrir{
+    margin-left: 13%;
+    }
+  
+    /*Desarrollo*/
+    #fraseDesarrollo{
+    position: absolute; 
+    font-weight: lighter;
+    font-size: 13.7px;
+    color: white; 
+    letter-spacing: 7px; 
+    margin-top: 80px;
+    margin-left:36.7%;
+    }
+    #tituloDesarrolloRojo{
+    font-family: BeVietnam-Boldimport;
+    margin-left:53.6%;
+    font-size: 64px; 
+    color: #D1525A; 
+    display: inline;
+    margin-top: 60%;
+    }
+    #tituloDesarrollo{
+    font-family: BeVietnam-Boldimport;
+    font-size: 64px; 
+    color: #FFF; 
+    display: inline;
+    }
+    #ubiListaDesarrollo{
+    margin-top: 5%;
+    margin-left: 54%;
+    }
+    #listaDesarrollo
+    {
+    color:white;
+    display: inline;
+    font-size: 24px;
+    }
+    #imgDesarrollo
+    { 
+    width: 50%;
+    margin-top: -41.4%;
+    margin-left: -10%;
+    }
+    #descripcionDesarrollo
+    {
+    height: 14.7%;
+    color: white;
+    font-size: 15px;
+    text-align: center;
+    background: #D1525A;
+    opacity: 85%;
+    border: #D1525A 1px solid ;
+    width: 30%;
+    margin-left: 20%;
+    margin-top: -43.2%;
+    padding-top: 20px;
+  
+    border-top-left-radius: 20%;
+    border-top-right-radius: 20%;
+    border-bottom-right-radius: 20%;
+    }
+    #desarrolloSection
+    {
+    margin-top: 13%;
+    }
+    .hrDesarrollo
+    {
+    color: #D1525A;
+    width: 90%;
+    height: 3px;  
+    border-bottom:#D1525A 1px solid;
+    opacity: 1;
+    }
+  
+    #btnDesarrollo1Abrir{
+    margin-left: 19.5%;
+    }
+    #btnDesarrollo2Abrir{
+    margin-left: 68.5%;
+    }
+    #btnDesarrollo3Abrir{
+    margin-left: 50%;
+    }
+    #btnDesarrollo4Abrir{
+    margin-left: 35.5%;
+    }
+    /*OUTSOURCING*/
+    #fraseOutsourcing
+    {
+    font-size: 13.7px;
+    position: absolute;
+    margin-top: 80px;
+    color: white;
+    letter-spacing: 7px;
+    margin-left: 5.7%;
+    }
+    #tituloOutsourcingRojo
+    {
+    font-family: BeVietnam-Boldimport;
+    margin-left:4%;
+    font-size: 64px; 
+    color: #D1525A; 
+    display: inline;
+    }
+    #tituloOutsourcing
+    {
+    font-family: BeVietnam-Boldimport;
+    font-size: 64px; 
+    color: #FFF; 
+    display: inline;
+    }
+    #descripcionOutsourcing{
+    position: absolute;
+    height: 15%;
+    color: white;
+    text-align: center;
+    background: #D1525A;
+    opacity: 85%;
+    border: #D1525A 1px solid ;
+    width: 20%;
+    margin-left: 50%;
+    color: white;
+    font-size: 15px; 
+    text-align: center;
+    padding-top: 20px;
+    border-top-left-radius: 20%;
+    border-top-right-radius: 20%;
+    border-bottom-right-radius: 20%;
+    }
+    #listaOutsourcing{
+    color:white;
+    display: inline;
+    font-size: 24px;
+    }
+    #ImagenOutsourcing{
+    margin-left: 52%;
+    margin-top: -33%;
+    width: 40%;
+    }
+    .btnOut{
+    margin-left: 4.5%;
+    }
+    #listaOut{
+    margin-top: 7%;
+    }
+    /*Sponsor*/
+    #tituloSponsor{
+    font-family: BeVietnam-Boldimport;
+    margin-top: 9%;
+    color: white;
+    letter-spacing: 10px;
+    text-align: center;
+    margin-left: -80px;
+    }
+    .Sponsor{
+    height: 50vh;
+    }
+    .imgSponsor{
+    display: inline;
+    width: 23%;
+    margin-top: 90px;
+  
+    }
+    #inhaus
+    {
+    margin-left: 20%;
+    }
+    #thebridge
+    {
+    width: 30%;
+    }
+    /*Clientes*/
+    .clientes{
+    height: 50vh;
+    background-color:#C4C4C4 ;
+  
+    }
+    #tituloClientes{
+    color:#000C33 ;
+    letter-spacing: 10px;
+    text-align: center;
+    padding-top: 40px;
+    }
+    .ImgMarcas{
+    display: inline;
+    width: 145px;
+    opacity: 0.5;
+    margin-left: 5.8%;
+    margin-top: 30px;
+    }
+    #imgPhilips{
+    width: 270px;
+    }
+    #imgCoca{
+    width: 255px;
+    }
+   /*PREGUNTAS FRECUENTES*/
+   #frasePregunta{
+    position: absolute;
+    margin-top: -70px;
+    color: white;
+    letter-spacing: 6px;
+    }
+    #listaPregunta{
+    color:white;
+    display: inline;
+    font-size: 24px;
+    } 
+    #btnPRegunta3Abrir{
+      margin-left: 23%;
+    }
+    #btnPRegunta4Abrir{
+    margin-left: 5%;
+    }
+    #btnPRegunta2Abrir{
+    margin-left: 11%;
+    }
+    #btnPRegunta1Abrir{
+      margin-left: 14%;
+      }
+      #btnPRegunta5Abrir{
+        margin-left: 7%;
+        }
+  #descripcionPregunta{
+    margin-left: 64%;
+    color: white;
+    font-size: 40px;
+    text-align: center;
+  }
+  .mails{
+    text-decoration: none;
+    color: white;
+    margin-left: 70%;
+    text-align: center;
+    font-size: 28px;
+  }
+  #ImgPregunta{
+    position: absolute;
+    left: 54%;
+    margin-top: -25%;
+    width: 34.5%;
+  }
+    
+    /*footer*/
+    #divFooter{
+    width: 100%; 
+    background-color: #FFF; 
+    height: 200%;
+    }
+    #footer{
+    margin-left: 10%;
+    width: 85%; 
+    padding-top: 100px;
+    }
+    /*whatsapp*/
+    .btnWsp{
+    position:fixed;
+    width:60px;
+    height:60px;
+    line-height: 55px;
+    bottom:25px;
+    right:25px;
+    background:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:35px;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index:100;
+    transition: all 300ms ease;
+    }
+    .btnWsp:hover{
+    background:#FFF ;
+    color:#20ba5a;
+    }
 
 @media only screen and (min-width:320px) and (max-width:768px){
   .secciones{
