--- a/index.css
+++ b/index.css
@@ -18,45 +18,98 @@
 
 body{
     background-color: #000C33;
+    overflow-x: none;
   }
 
+  nav{
+    z-index: 2;
+  }
   .navbar-brand{
     font-weight: bold;
     }
-
-    #ImagenPrincipal{
-    height: 60%;
-    margin-left: 150%;
-    position:  relative;
+    .sectionBanner{
+      margin-top: 24%;
     }
     .ImgPrincipal{
-      margin-left: 52%;
-      width: 45%;
+      margin-left: 44%;
+      width: 56%;
+      position: absolute;
+      top: -11%;
     }
     .tituloBlancoPrincipal
     {
+      font-family: BeVietnam-Boldimport;
       position: absolute;
       color: white;
-      top: 42%;
-      left: 21%;
-      font-size: 87px;
+      top: 35%;
+      left: 15%;
+      font-size: 112px;
     }
     .tituloRojoPrincipal
     {
+      font-family: BeVietnam-Boldimport;
       position: absolute;
-      color: #D1525A;
-      top: 49%;
-      left: 27.1%;
-      font-size: 87px
+      color: rgb(209, 82, 90);
+      top: 45%;
+      left: 28.1%;
+      font-size: 112px;
     }
-    .banner{
-    background-color: white;
+    .FrasePrincipal{
+      color: white;
+      letter-spacing: 10px;
+      position: absolute;
+      top: 63%;
+      left: 31%;
     }
+    .barraBlanca{
+      background-color: white;
+      position: absolute;
+      width: 100vw;
+      bottom: 0px;
+      height: 29%;
+    }
+
+    .descripcionPrincipal1
+    {
+      position: absolute;
+      font-size: 21px;
+      border-right: 0.5px solid rgba(108, 107, 109, 0.44);
+      left: 12%;
+      bottom: 69px;
+      color: black;
+      width: 23%;
+      height: 103px;
+    }
+    .descripcionPrincipal2
+    {
+      position: absolute;
+      font-size: 21px;
+      border-right: 0.5px solid rgba(108, 107, 109, 0.44);
+      left: 38%;
+      bottom: 69px;
+      color: black;
+      width: 29%;
+      height: 103px;
+      padding-right: 32px;
+ 
+    
+    }
+    .descripcionPrincipal3
+    {
+      position: absolute;
+      font-size: 21px;
+      right: 10%;
+      bottom: 69px;
+      color: black;
+      width: 20%;
+      height: 103px;
+    }
+
     .secciones{
     width: 100vw;
     height: 100vh;
-    margin-top: 100px;
-    margin-bottom: -15%;
+    margin-top: 30px;
+
     }
   
     h3{
@@ -67,18 +120,12 @@ body{
     width: 37%;
   
     }
-    .barraBlanca{
-    border-top: 291px solid white;
-    max-width: 100vw;
-    padding: 0;
-    margin: -292px auto 0 auto;
-    }
   
     .staffing{
     position: absolute;
     width: 40%;
     left: 47%;
-    margin-top:-400px;
+    margin-top:-300px;
     }
   
     hr{
@@ -125,7 +172,65 @@ body{
     height: 53px;
     margin-top: 30px;
     }
-  
+     /*PARTNER*/
+
+     #tituloPartner
+     {
+      font-weight: lighter;
+      font-family: BeVietnam-Lightimport;
+      font-size: 30px;
+      color: #FFF;
+      display: inline;
+      letter-spacing: 10px;
+      margin-left: 6%;
+     }
+     #tituloPartner2
+     {
+      font-weight: lighter;
+      font-family: BeVietnam-Lightimport;
+      font-size: 30px;
+      color: #FFF;
+      display: inline;
+      letter-spacing: 10px;
+     }
+     #tituloPartnergRojo{
+      font-family: BeVietnam-Boldimport;
+      font-size: 30px;
+      color: #D1525A;
+      display: inline;
+      letter-spacing: 10px;
+     }
+     .imgPartner1{
+      width: 55%;
+      margin-top: 20%;
+      margin-left: -18px;
+     }
+     .imgPartner2{
+      width: 120%;
+      margin-top: 50%;
+      margin-left: -50px;
+     }
+     .imgPartner3{
+      width: 60%;
+      margin-top: 30%;
+      margin-left: 43%;
+     }
+     #frasePartner1{
+       font-weight: lighter;
+      color: white;
+      font-size: 19px;
+      text-align: initial;
+      letter-spacing: 1px;
+     
+     }
+     #frasePartner2{
+      font-weight: lighter;
+      color: white;
+      font-size: 19px;
+      margin-top: 0px;
+      text-align: end;
+     }
+
   
     /*CiberSeguridad*/
     #fraseCiber{
@@ -284,6 +389,7 @@ body{
     margin-left: 35.5%;
     }
     /*OUTSOURCING*/
+
     #fraseOutsourcing
     {
     font-size: 13.7px;
@@ -370,30 +476,33 @@ body{
     }
     /*Clientes*/
     .clientes{
-    height: 50vh;
-    background-color:#C4C4C4 ;
-  
-    }
-    #tituloClientes{
-    color:#000C33 ;
-    letter-spacing: 10px;
-    text-align: center;
-    padding-top: 40px;
-    }
-    .ImgMarcas{
-    display: inline;
-    width: 145px;
-    opacity: 0.5;
-    margin-left: 5.8%;
-    margin-top: 30px;
-    }
-    #imgPhilips{
-    width: 270px;
-    }
-    #imgCoca{
-    width: 255px;
-    }
+      height: 50vh;
+      background-color:#C4C4C4 ;
+    
+      }
+      #tituloClientes{
+      color:#000C33 ;
+      letter-spacing: 10px;
+      text-align: center;
+      padding-top: 40px;
+      }
+      .ImgMarcas{
+      display: inline;
+      width: 145px;
+      opacity: 0.5;
+      margin-left: 5.8%;
+      margin-top: 30px;
+      }
+      #imgPhilips{
+      width: 270px;
+      }
+      #imgCoca{
+      width: 255px;
+      }
    /*PREGUNTAS FRECUENTES*/
+   #PreguntasSection{
+    margin-top: 14%;
+   }
    #frasePregunta{
     position: absolute;
     margin-top: -70px;
@@ -406,32 +515,44 @@ body{
     font-size: 24px;
     } 
     #btnPRegunta3Abrir{
-      margin-left: 23%;
+      margin-left: 21%;
     }
     #btnPRegunta4Abrir{
-    margin-left: 5%;
+    margin-left: 11.5%;
     }
     #btnPRegunta2Abrir{
-    margin-left: 11%;
+    margin-left: 17.1%;
     }
     #btnPRegunta1Abrir{
-      margin-left: 14%;
+      margin-left: 20.2%;
       }
       #btnPRegunta5Abrir{
-        margin-left: 7%;
+        margin-left: 13.5%;
         }
   #descripcionPregunta{
-    margin-left: 64%;
+    font-family: BeVietnam-Boldimport;
+    margin-left: 37%;
     color: white;
-    font-size: 40px;
+    font-size: 28px;
     text-align: center;
   }
-  .mails{
+  .mail1{
+    position: absolute;
     text-decoration: none;
     color: white;
-    margin-left: 70%;
     text-align: center;
     font-size: 28px;
+    left: 66%;
+    margin-top: -3.1%;
+  }
+  .mail2{
+    position: absolute;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-size: 28px;
+    left: 66%;
+    margin-top: -1%;
   }
   #ImgPregunta{
     position: absolute;
